--- a/html/css/style.css
+++ b/html/css/style.css
@@ -1,14 +1,28 @@
+body
+{
+    background-color: skyblue;
+background: linear-gradient(to bottom, rgba);
+text-align: center;
+}
+
+
+
+
+
 /* 1. Selectors */
 
 /* selector { cssProperty: cssValue; } */
 /* a.) Element Selector - Selects element based on the name */
 h1 {
     color: blue;
+    text-shadow: 20px 10px 0px,black;
 }
+
 /* b.) id Selector - Selects the element based on the id. */
 #heading-one:hover {
     color: green;
 }
+
 /* c.) class Selector - Selects the elements based on the class name */
 /* #para-one, #para-two, #para-four {
     color: gray;
@@ -16,6 +30,7 @@ h1 {
 .myPara {
     color: gray;
 }
+
 /* d.) Attribute Slector */
 /* elementName[attributeName condition] */
 /* I want to find the <a> whose href starts with https:// */
@@ -25,29 +40,68 @@ $ -> Ends with
 a[href^="https://"] {
     color: yellow;
 }
+
 a[href$=".jpg"] {
     color: maroon;
 }
+
 a[href*="/"] {
     color: red;
 }
+
 img[src^="../"] {
     border: 10px solid gray;
-} 
+}
+
 /* e.) Pseudo Selectors */
 /* elementName: pseudoProperty { ... } */
 ol:first-child {
     color: red;
 }
+
 li:first-child {
     color: green;
 }
-.ordered-list-item:last-child {
-    color: red;
+
+.Ordered-List-item:first-child {
+    color: rgb(0, 98, 255);
+    border: 20px solid green;
 }
+
 .unordered-list-item:first-child {
     color: blue;
 }
+
 .ordered-list-item:nth-child(3) {
     color: yellow;
+}
+.container
+{
+    width: 400px; 
+    height: 400px;
+    background: radial-gradient(circle, black 40%,yellow 20%,black 60%)  ;
+}
+#nano
+{
+    border: 20px solid white;
+    padding: 20px 20px 20px 20px;
+    
+}
+#container
+{
+    display: flex;
+    /* flex direction: center  */
+    flex-wrap:wrap ;
+    /* justify-contant: center */
+    /* justify-contant: space-betw*/
+}
+.container-item
+{
+   width: 100px;
+   height: 100px;
+   font-size: 6em;
+   text-align: center; 
+   background: pink;
+   color: antiquewhite;
+   margin: 10%;
 }
